// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<ContentPackPreview /> should render with empty content pack 1`] = `
<div>
  <div
    className="row"
  >
    <div
      className="col-sm-6"
    >
      <div
        className="row"
      >
        <div
          className="col-sm-offset-1"
        >
          <div
            id="content-pack-details"
          >
            <h2>
              Details
            </h2>
            <br />
            <div>
              <dl
                className="deflist"
              >
                <dt>
                  Version:
                </dt>
                 
                <dd />
                <dt>
                  Name:
                </dt>
                 
                <dd>
                   
                </dd>
                <dt>
                  Summary:
                </dt>
                 
                <dd>
                   
                </dd>
                <dt>
                  Vendor:
                </dt>
                 
                <dd>
                   
                </dd>
                <dt>
                  URL:
                </dt>
                 
                <dd>
                  <a
                    href={undefined}
                  />
                   
                </dd>
              </dl>
            </div>
            <br />
            <br />
            <br />
            <h3>
              Description
            </h3>
            <br />
            <div
              dangerouslySetInnerHTML={
                Object {
                  "__html": "",
                }
              }
            />
          </div>
        </div>
      </div>
    </div>
    <div
      className="col-sm-6"
    >
      <div>
        <h2>
          Constraints
        </h2>
        <br />
        <br />
        <div>
          <div
            className="row "
          >
            <div
              className="col-md-12"
            >
              <div
                className="data-table table-responsive"
                id="content-packs-constraints"
              >
                <p>
                  No data available.
                </p>
              </div>
            </div>
          </div>
        </div>
      </div>
    </div>
  </div>
  <button
    className="btn btn-default"
    disabled={false}
    id="create"
    onClick={[Function]}
    type="button"
  >
    Create
  </button>
</div>
`;

exports[`<ContentPackPreview /> should render with filled content pack 1`] = `
<div>
  <div
    className="row"
  >
    <div
      className="col-sm-6"
    >
      <div
        className="row"
      >
        <div
          className="col-sm-offset-1"
        >
          <div
            id="content-pack-details"
          >
            <h2>
              Details
            </h2>
            <br />
            <div>
              <dl
                className="deflist"
              >
                <dt>
                  Version:
                </dt>
                 
                <dd />
                <dt>
                  Name:
                </dt>
                 
                <dd>
                  name
                   
                </dd>
                <dt>
                  Summary:
                </dt>
                 
                <dd>
                  summmary
                   
                </dd>
                <dt>
                  Vendor:
                </dt>
                 
                <dd>
                  vendor
                   
                </dd>
                <dt>
                  URL:
                </dt>
                 
                <dd>
                  <a
                    href="http://example.com"
                  >
                    http://example.com
                  </a>
                   
                </dd>
                <span>
                  <dt>
                    Parameters:
                  </dt>
                   
                  <dd>
                    0
                  </dd>
                </span>
              </dl>
            </div>
            <br />
            <br />
            <br />
            <h3>
              Description
            </h3>
            <br />
            <div
              dangerouslySetInnerHTML={
                Object {
                  "__html": "<p>descr</p>",
                }
              }
            />
          </div>
        </div>
      </div>
    </div>
    <div
      className="col-sm-6"
    >
      <div>
        <h2>
          Constraints
        </h2>
        <br />
        <br />
        <div>
          <div
            className="row "
          >
            <div
              className="col-md-12"
            >
              <div
                className="data-table table-responsive"
                id="content-packs-constraints"
              >
                <p>
                  No data available.
                </p>
              </div>
            </div>
          </div>
        </div>
      </div>
    </div>
  </div>
  <button
    className="btn btn-default"
    disabled={false}
    id="create"
    onClick={[Function]}
    type="button"
  >
    Create
  </button>
</div>
`;
